devops/k8s/apc/nightly/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: iknito-workflow-nightly
  labels:
    name: iknito-workflow-nightly
