devops/k8s/apc/nightly/patches.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iknito-camunda
  labels:
    app: iknito-camunda
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: iknito-camunda
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iknito-smartfund
  labels:
    app: iknito-smartfund
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: iknito-smartfund
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "2.5Gi"
            cpu: "1000m"
